--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "redux-thunk": "^2.2.0",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0"
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
