Fixed webpack dev

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AntonioGarnier.github.io/Todo-List",
+  "homepage": "https://antoniogarnier.github.io/Todo-List/",
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
